@@ -4,7 +4,7 @@ import com.rbkmoney.damsel.base.InvalidRequest;
 import com.rbkmoney.payout.manager.*;
 import com.rbkmoney.payout.manager.domain.tables.pojos.CashFlowPosting;
 import com.rbkmoney.payout.manager.exception.InsufficientFundsException;
-import com.rbkmoney.payout.manager.exception.InvalidStateException;
+import com.rbkmoney.payout.manager.exception.InvalidRequestException;
 import com.rbkmoney.payout.manager.exception.NotFoundException;
 import com.rbkmoney.payout.manager.service.CashFlowPostingService;
 import com.rbkmoney.payout.manager.service.PayoutKafkaProducerService;
@@ -15,7 +15,9 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.thrift.TException;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 @Slf4j
 @Service
@@ -37,6 +39,9 @@ public class PayoutManagementHandler implements com.rbkmoney.payout.manager.Payo
             return getPayout(payoutId);
         } catch (InsufficientFundsException ex) {
             throw new InsufficientFunds();
+        } catch (InvalidRequestException ex) {
+            throw new InvalidRequest(
+                    Optional.ofNullable(ex.getMessage()).map(List::of).orElse(Collections.emptyList()));
         }
     }
 
@@ -56,8 +61,9 @@ public class PayoutManagementHandler implements com.rbkmoney.payout.manager.Payo
         try {
             payoutService.confirm(payoutId);
             sendToKafka(payoutId);
-        } catch (InvalidStateException ex) {
-            throw new InvalidRequest(List.of(ex.getMessage()));
+        } catch (InvalidRequestException ex) {
+            throw new InvalidRequest(
+                    Optional.ofNullable(ex.getMessage()).map(List::of).orElse(List.of()));
         }
     }
 
@@ -66,8 +72,9 @@ public class PayoutManagementHandler implements com.rbkmoney.payout.manager.Payo
         try {
             payoutService.cancel(payoutId, details);
             sendToKafka(payoutId);
-        } catch (InvalidStateException ex) {
-            throw new InvalidRequest(List.of(ex.getMessage()));
+        } catch (InvalidRequestException ex) {
+            throw new InvalidRequest(
+                    Optional.ofNullable(ex.getMessage()).map(List::of).orElse(Collections.emptyList()));
         }
     }
 
